<resources>
     <string name="settings">Settings</string>
	<string name="app_name">PhotoWall</string>
	<string name="action_settings">Settings</string>
	<string name="hello_world">Hello world!</string>
	<string name="sign_up">注册</string>
	<string name="login">登陆</string>
	<string name="name">姓名</string>
	<string name="user_name">用户名</string>
	<string name="e_mail">电子邮件</string>
	<string name="password">密码</string>
	<string name="create_account">创建账户</string>
	<string name="user_name_or_emali">用户名或电子邮件</string>
	<string name="congratulations">Congratulations!!</string>
	<string name="born_legend">Born of a Legend</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="select_album">Select Images</string>
	<string name="btn_return">back</string>
	<string name="tip_please_wait_content">Loading Images</string>
	<string name="sign_up_text">Sign up</string>
	<string name="by_email_or_text">by email or</string>
	<string name="login_text">Login</string>
	<string name="here_text">here</string>
	<string name="account">Account</string>
	<string name="profile_picture">Profile picture</string>
	<string name="username">Username</string>
	 <string name="email">Email</string>
	 <string name="bio">Bio</string>
	 <string name="location">Location</string>
	 <string name="have_a_blog">Have a blog or website?</string>
	 <string name="link">Link</string>
	 <string name="show_unsafe_content_help">Unsafe content may contain nudity or other sensitive content.</string>
	 <string name="show_unsafe_content">Show unsafe content</string>
	 <string name="social">Social</string>
	 <string name="facebook">Facebook</string>
	 <string name="link_facebook_account">Link my Facebook account</string>
	 <string name="facebook_add_to_timeline_help">Show your favorite images on your Facebook Timeline</string>
     <string name="facebook_add_to_timeline">Add to Timeline</string>
	 <string name="follow_my_friends">Follow my Friends</string>
	 <string name="twitter">Twitter</string>
	 <string name="link_twitter_account">Link my Twitter account</string>
	 <string name="twitter_tweet_my_images">Auto Tweet my Hearts</string>
	 <string name="twitter_add_to_timeline_help">Show your favorite images in Twitter every time you heart something</string>
	 <string name="privacy">Privacy</string>
	 <string name="private_account_help">Only people you authorize will be able to view and follow your profile.</string>
	 <string name="private_account">Private account</string>
	 <string name="hide_from_search">Hide from Search</string>
     <string name="hide_from_search_help">"Don't show your account when friends search you on PHOTOWALL by your email, Facebook or Twitter."</string>
     <string name="notifications">Notifications</string>
     <string name="weekly_newsletter">Weekly Newsletter</string>
     <string name="weekly_newsletter_help">Receive an email every week with the top images and users from the past 7 days.</string>
     <string name="new_followers">New followers</string>
     <string name="new_followers_help">Receive an email notification when someone starts to follow you.</string>
	 <string name="about">About</string>
	 <string name="about_whi">About PHOTOWALL</string>
	 <string name="version">Version</string>
    <string name="pref_key_profile_picture">pref_key_profile_picture</string>
    <string name="pref_key_name">pref_key_name</string>
    <string name="pref_key_username">pref_key_username</string>
    <string name="pref_key_email">pref_key_email</string>
    <string name="pref_key_bio">pref_key_bio</string>
    <string name="pref_key_location">pref_key_location</string>
    <string name="pref_key_link">pref_key_link</string>
    <string name="pref_key_unsafe_content">pref_key_unsafe_content</string>
    <string name="pref_key_facebook_link_account">pref_key_facebook_link_account</string>
    <string name="pref_key_facebook_timeline">pref_key_facebook_timeline</string>
    <string name="pref_key_facebook_follow_my_friends">pref_key_facebook_follow_my_friends</string>
    <string name="pref_key_twitter_link_account">pref_key_twitter_link_account</string>
    <string name="pref_key_twitter_timeline">pref_key_twitter_timeline</string>
    <string name="pref_key_twitter_follow_my_friends">pref_key_twitter_follow_my_friends</string>
    <string name="pref_key_private_account">pref_key_private_account</string>
    <string name="pref_key_hide_from_search">pref_key_hide_from_search</string>
    <string name="pref_key_weekly_newsletter">pref_key_weekly_newsletter</string>
    <string name="pref_key_new_followers">pref_key_new_followers</string>
    <string name="pref_key_about_whi">pref_key_about_whi</string>
    <string name="pref_key_version">pref_key_version</string>
    <string name="settings_sound_fx">Disable shutter sound</string>
    <string name="settings_sound_fx_summary">Disabling the shutter sound is an experimental feature and may not work on all phones</string>
    <string name="settings_preview_animation">Disable preview animation</string>
    <string name="settings_preview_animation_summary">Disable the animation shown after taking a photo</string>
    <string name="settings_get_lightbox">Get Lightbox</string>
    <string name="settings_get_lightbox_summary">Download the Lightbox app from the Android Market to apply effects and share your photos with friends on Facebook &amp; Twitter</string>
    <string name="camera_error_title">Camera error</string>
    <string name="cannot_connect_camera">Cannot connect to camera.</string>
    <string name="gallery_camera_bucket_name">Camera pictures</string>
    <string name="gallery_camera_videos_bucket_name">Camera videos</string>
    <string name="no_storage" product="default">Please insert an SD card before using the camera.</string>
    <string name="not_enough_space" product="default">Your SD card is full.</string>
    <string name="preparing_sd" product="default">Preparing SD card\u2026</string>
    <string name="access_sd_fail" product="default">Fail to access SD card.</string>
    <string name="confirm_restore_title">Restore defaults</string>
    <string name="confirm_restore_message">Camera settings will be restored to defaults.</string>
    <string name="pref_camera_id_entry_back">Back</string>
    <string name="pref_camera_id_entry_front">Front</string>
    <string name="pref_camera_settings_category">Camera settings</string>
    <string name="pref_camera_jpegquality_default" translatable="false">superfine</string>
    <string name="pref_camera_focusmode_default" translatable="false">auto</string>
    <string name="pref_camera_focusmode_title">Focus mode</string>
    <string name="pref_camera_focusmode_entry_auto">Auto</string>
    <string name="pref_camera_focusmode_entry_infinity">Infinity</string>
    <string name="pref_camera_focusmode_entry_macro">Macro</string>
    <string name="pref_camera_flashmode_default" translatable="false">auto</string>
    <string name="pref_camera_flashmode_no_flash" translatable="false">no_flash</string>
    <string name="pref_camera_whitebalance_default" translatable="false">auto</string>
    <string name="pref_camera_whitebalance_title">White balance</string>
    <string name="pref_camera_whitebalance_entry_auto">Auto</string>
    <string name="pref_camera_whitebalance_entry_incandescent">Incandescent</string>
    <string name="pref_camera_whitebalance_entry_daylight">Daylight</string>
    <string name="pref_camera_whitebalance_entry_fluorescent">Fluorescent</string>
    <string name="pref_camera_whitebalance_entry_cloudy">Cloudy</string>
    <string name="pref_camera_coloreffect_default" translatable="false">none</string>
    <string name="pref_camera_scenemode_default" translatable="false">auto</string>
    <string name="pref_camera_scenemode_title">Scene mode</string>
    <string name="pref_camera_scenemode_entry_auto">Auto</string>
    <string name="pref_camera_scenemode_entry_action">Action</string>
    <string name="pref_camera_scenemode_entry_portrait">Portrait</string>
    <string name="pref_camera_scenemode_entry_landscape">Landscape</string>
    <string name="pref_camera_scenemode_entry_night">Night</string>
    <string name="pref_camera_scenemode_entry_night_portrait">Night portrait</string>
    <string name="pref_camera_scenemode_entry_theatre">Theatre</string>
    <string name="pref_camera_scenemode_entry_beach">Beach</string>
    <string name="pref_camera_scenemode_entry_snow">Snow</string>
    <string name="pref_camera_scenemode_entry_sunset">Sunset</string>
    <string name="pref_camera_scenemode_entry_steadyphoto">Steady photo</string>
    <string name="pref_camera_scenemode_entry_fireworks">Fireworks</string>
    <string name="pref_camera_scenemode_entry_party">Party</string>
    <string name="pref_camera_scenemode_entry_candlelight">Candlelight</string>
    <string name="pref_restore_title">Camera settings</string>
    <string name="pref_restore_detail">Restore defaults</string>
    <string name="pref_exposure_title">Exposure</string>
    <string name="pref_exposure_default" translatable="false">0</string>
    <string name="details_ok">OK</string>
    <string name="image_file_name_format" translatable="false">"'IMG'_yyyyMMdd_HHmmss"</string>
    <string name="zoom_control_title">Zoom</string>
    <string name="tip_not_null_pass_name">用户名或密码不能为空</string>
    <string name="tip_net_not_availables">网络不可用</string>
    <string name="tip_geting_data">正在获取数据...</string>
    <string name="tip_upload_error_retry">上传失败请重试</string>
    <string name="tip_upload_image">正在上传图片...</string>
    <string name="main_login_introduce">Challenge\nLife Achievement\nTogether</string>
    <string name="main_login_already_has_acc">Already has Account?</string>
    <string name="main_login_here"><u>Login here</u></string>
    <string name="main_login_sign_up">SIGN UP</string>
    <string name="net_accessable_no">NetWork not avaiable</string>
    <string name="app_id">1423764471191329</string>
    <string name="guide_publish">点击publish发表post</string>
    <string name="profile_mastery">MASTERY \n %1$d</string>
    <string name="profile_achieved">ACHIEVED \n %1$d</string>
    <string name="profile_challenge">CHALLENGE \n %1$d</string>
    <string name="archieved_count">Archieved <b><font color='red'>3</font></b> times</string>
    <string name="indicator_new">• NEW</string>
    <string name="indicator_hot">• HOT</string>
    <string name="indicator_challenging">• CHALLENGING</string>
    <string name="indicator_archievement">• ARCHIEVEMENT</string>
</resources>