<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/background"
	android:gravity="center_horizontal"
	android:orientation="vertical"
	 >

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_marginTop="30dip"
        android:textSize="30sp"
        android:text="@string/sign_up" />
	<EditText
		android:id="@+id/first_name"
		android:layout_width="280dip"
		android:layout_height="50dip"
		android:layout_marginTop="15dip"
		android:maxLength="15"
		android:textColor="@android:color/black"
		android:textSize="18sp"
		android:hint="@string/name" />
	<EditText
		android:id="@+id/user_name"
		android:layout_width="280dip"
		android:layout_height="50dip"
		android:layout_marginTop="15dip"
		android:maxLength="15"
		android:textColor="@android:color/black"
		android:textSize="18sp"
		android:hint="@string/user_name" />
	<EditText
		android:id="@+id/email_et"
		android:layout_width="280dip"
		android:layout_height="50dip"
		android:layout_marginTop="15dip"
		android:textColor="@android:color/black"
		android:textSize="18sp"
		android:hint="@string/e_mail" />
	<EditText
		android:id="@+id/password_et"
		android:layout_width="280dip"
		android:layout_height="50dip"
		android:layout_marginTop="15dip"
		android:textColor="@android:color/black"
		android:textSize="18sp"
		android:password="true"
		android:hint="@string/password" />
	<Button
        android:id="@+id/sign_up_btn"
        android:layout_width="280dip"
        android:layout_height="50dip"
        android:layout_marginTop="15dip"
        android:text="@string/sign_up"
        android:gravity="center"
        />
</LinearLayout>