<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/background"
	android:gravity="center_horizontal"
	android:orientation="vertical"
	 >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:textColor="@android:color/black"
        android:layout_marginTop="80dip"
        android:textSize="30sp"
        android:text="@string/congratulations" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:src="@drawable/congratulations" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:text="@string/born_legend" />
	<Button
        android:id="@+id/ok_btn"
        android:layout_width="wrap_content"
        android:layout_height="50dip"
        android:layout_marginBottom="90dip"
        android:text="@string/ok"
        android:textSize="25sp"
        android:gravity="center"
        />
</LinearLayout>