<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#ffffff"
	android:gravity="center_horizontal"
	android:orientation="vertical"
	 >

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="0dip"
		android:layout_weight="3"
		android:gravity="center"
		android:textColor="@android:color/black"
		android:textSize="50sp"
		android:text="LOGO" />
    <LinearLayout
    	android:id="@+id/en_layout"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="2"
        android:visibility="gone"
        android:orientation="vertical">
    <ImageButton
        android:id="@+id/facebook_image"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@null"
        android:src="@drawable/landing_page_07" />
    <ImageButton
        android:id="@+id/twitter_image"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@null"
        android:src="@drawable/landing_page_10" />
    </LinearLayout>
    <LinearLayout
    	android:id="@+id/ch_layout"
		android:layout_width="wrap_content"
		android:layout_height="0dip"
		android:layout_weight="2"
		android:orientation="vertical"
		 >

		<LinearLayout
			android:layout_width="250dip"
			android:layout_height="0dip"
			android:layout_weight="1"
			android:gravity="center"
			android:orientation="horizontal" >

			<Button
				android:id="@+id/weibo_image"
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="微博"
				 />

			<Button
				android:id="@+id/qq_image"
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="QQ" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="250dip"
			android:layout_height="0dip"
			android:layout_weight="1"
			android:gravity="center"
			android:orientation="horizontal" >

			<Button
				android:id="@+id/douban_image"
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="豆瓣" />

			<Button
				android:id="@+id/renren_image"
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="人人"
				android:src="@drawable/landing_page_10" />
		</LinearLayout>
	</LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="horizontal">"
     <TextView
     	android:id="@+id/sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:text="@string/sign_up_text" />
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:text="@string/by_email_or_text" />
     <TextView
     	android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:text="@string/login_text" />
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:text="@string/here_text" />
    </LinearLayout>

</LinearLayout>
